IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4/13/15: Added option to set fallback thresholds for Findbeads3d.

4/10/15: Made Batchruntomo apply directives for options in golderaser.com 
(In 4.7).

4/9/15: IMOD_4-8-30
4/9/15: Added options to Findbeads3d to allow a subvolume to be analyzed and
started taking the square root of peak strength for analysis and display.

4/9/15: Fixed Corrsearch3d so that Z slice limits picked in etomo will specify
the proper Y range in the unrotated volume (In 4.7).

4/9/15: Fixed Batchruntomo to scale fine alignment shifts by the prealign
binning when combining with the prealign shifts (In 4.7).

4/7/15: In eTomo - Tomogram Combination, changes to handle a combine done by
batchruntomo and to allow automatic patch fitting to be done through the 
interface.(Bug# 1826)

4/3/15: Clip histogram has a new option to report a percentile point and
options for some more specialized analysis.

4/3/15: Made Ccderaser use the median instead of mean of surrounding points as
the value to taper to inside a contour.

4/3/15: Improved GPU-related debug output and error reporting from Tilt.

4/1/15: IMOD_4-8-29
3/31/15: Fixed clip average and other operations broken by 2/14/15 changes.

3/28/15: Made clip unwrap copy extra header when full file is processed.

3/26/15: Fixed slashmasksort.

3/19/15: IMOD_4-8-28
3/19/15: In eTomo - PEET fixed a problem where blurMaskStdDev was not being
saved when "User supplied binary file" was selected.(Bug# 1867)

3/16/15: Fixed Ccderaser taking mean inside instead of outside boundary
contours (In 4.7).

3/15/15: IMOD_4-7-14
3/15/15: Fixed fixCygPython.sh to put Cygwin on path before running commands 
(In 4.7).

3/9/15: IMOD_4-8-27
3/8/15: In eTomo - Fiducial Model Dialog changed the transferfid -x parameter
to an integer with two values (0 and 1).  A third value will be added later.

3/8/15: In eTomo, Changed the processchunks GPU list divider to ":".  In the